--- a/templates/Classification.html
+++ b/templates/Classification.html
@@ -21,7 +21,7 @@
     <!-- In <body> -->
     <!-- <link rel="stylesheet" href="style.css" /> -->
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='test/style.css') }}">
 
     <style>
 
